<resources>
    <string name="app_name">CocktailWizardApp</string>
    <string name="logo_cocktail_wizard">Logo Cocktail Wizard</string>
    <string name="cocktail_wizard">COCKTAIL WIZARD</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="icone_calendrier">Icone calendrier</string>
    <string name="devenir_membre">Devenir Membre</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="courriel">Courriel</string>
    <string name="confirmation_du_mot_de_passe">Confirmation du mot de passe</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="modifier_mon_mot_de_passe">Modifier mon mot de passe</string>
    <string name="supprimer_mon_compte">Supprimer mon compte</string>
    <string name="mot_de_passe_actuel">Mot de passe actuel</string>
    <string name="confirmer">Confirmer</string>
    <string name="confirmer_nouveau_mot_de_passe">Confirmer nouveau mot de passe</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="confirmer_le_nouveau_mot_de_passe">Confirmer le nouveau mot de passe</string>
    <string name="entrer_nouveau_mot_de_passe">Entrer nouveau mot de passe</string>
    <string name="entrer_mot_de_passe">Entrer mot de passe</string>
</resources>