<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_authentification"
    tools:context=".Inscription">

    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:text="@string/devenir_membre"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightGuideLine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LeftGuideLine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/inputNomIns_id"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle_arrondi_blanc"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/RightGuideLine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/LeftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:text="@string/confirmation_du_mot_de_passe"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightGuideLine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/LeftGuideLine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:text="@string/courriel"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightGuideLine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/LeftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/inputNomIns_id"
        app:layout_constraintVertical_bias="0.011" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:text="@string/date_de_naissance"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightGuideLine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/LeftGuideLine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:text="@string/mot_de_passe"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightGuideLine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/LeftGuideLine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423" />

    <TextView
        android:id="@+id/outputDateIns_id"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/RightGuideLine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/LeftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:text="@string/nom_d_utilisateur"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightGuideLine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/LeftGuideLine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <EditText
        android:id="@+id/inputCourIns_id"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle_arrondi_blanc"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/RightGuideLine"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="@+id/LeftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/inputConfMdpIns_id"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rectangle_arrondi_blanc"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/RightGuideLine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/LeftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/inputMdpIns_id"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rectangle_arrondi_blanc"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/RightGuideLine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/LeftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/LeftGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/RightGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <Button
        android:id="@+id/btnInscrire_id"
        android:layout_width="160dp"
        android:layout_height="49dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#EEBBC3"
        android:text="@string/s_inscrire"
        android:textColor="#232946"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightGuideLine"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/LeftGuideLine" />

    <ImageView
        android:id="@+id/imageCalendrier_id"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/icone_calendrier"
        app:layout_constraintBottom_toTopOf="@+id/btnInscrire_id"
        app:layout_constraintEnd_toStartOf="@+id/RightGuideLine"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/LeftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/outputDateIns_id"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_calendrier" />

</androidx.constraintlayout.widget.ConstraintLayout>